--- a/index.html
+++ b/index.html
@@ -36,11 +36,25 @@
 
         <div class="subsection" id="projects">
             <h1>Projects</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                culpa qui officia deserunt mollit anim id est laborum.</p>
+            <ul>
+                <li>
+                    <img src="images/temp1.jpg">
+                    <p>Placeholder image 1</p>
+                </li>
+                <li>
+                    <img src="images/temp2.jpg">
+                    <p>Placeholder image 2</p>
+                </li>
+                <li>
+                    <img src="images/temp3.jpg">
+                    <p>Placeholder image 3</p>
+                </li>
+                <li>
+                    <img src="images/temp4.jpg">
+                    <p>Placeholder image 4</p>
+                </li>
+            </ul>
+            <a href="">Click to see more</a>
         </div>
         <div id="skills" class="subsection">
             <h1>Skills</h1>
