--- a/index.html
+++ b/index.html
@@ -9,9 +9,70 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <section class="home" id="home">
+        <img class="picture" src="images/headshot.JPG" alt="Avatar">
+        <div class="home-content">
+            <h1>Hi, I'm Jason.</h1>
+            <p>I'm an aspiring software engineer from Dublin, Ohio,
+                and am currently a student at Georgia Tech. I primarily
+                code in Java, but I am always looking to learn more and
+                learn more programming languages and skills.
+            </p>
+        </div>
+        <hr>
+        <nav>
+            <div class="nav-links">
+                <ul>
+                    <li><a href ="#home">HOME</a></li>
+                    <li><a href ="#projects">PROJECTS</a></li>
+                    <li><a href ="#skills">SKILLS</a></li>
+                    <li><a href ="#about me">ABOUT ME</a></li>
+                    <li><a href ="#contact">CONTACT</a></li>
+                </ul>
+            </div>
+        </nav>
+    </section>
+    <section class="subsection" id="projects">
+        <h1>Projects</h1>
+        <ul>
+            <li>
+                <img src="images/temp1.jpg">
+                <p>Placeholder image 1</p>
+            </li>
+            <li>
+                <img src="images/temp2.jpg">
+                <p>Placeholder image 2</p>
+            </li>
+            <li>
+                <img src="images/temp3.jpg">
+                <p>Placeholder image 3</p>
+            </li>
+            <li>
+                <img src="images/temp4.jpg">
+                <p>Placeholder image 4</p>
+            </li>
+        </ul>
+        <a href="">Click to see more</a>
+
+    </section>
+    <section class="subsection" id="skills">
+        <h1>Skills</h1>
+        <p>Although I mainly program in Java, I am always looking to branch out, learn more languages and
+            other skills. I have the most experience in coding in Java and object-oriented languages, and have
+            experience in C, Python, and a little HTML5.</p>
+    </section>
+    <section class="subsection" id="about me">
+
+    </section>
+    <section class="subsection" id="contact">
+
+    </section>
+
+
+    <!--
     <section class="content">
         <img class="picture" src="images/headshot.JPG" alt="Avatar" id="home">
-        <div class="section">
+        <div class="section" id="top-section">
             <div id="top">
                 <h1>Hi, I'm Jason.</h1>
                 <p>I'm an aspiring software engineer from Dublin, Ohio,
@@ -33,7 +94,6 @@
                 </div>
             </nav>
         </div>
-
         <div class="subsection" id="projects">
             <h1>Projects</h1>
             <ul>
@@ -58,11 +118,9 @@
         </div>
         <div id="skills" class="subsection">
             <h1>Skills</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Although I mainly program in Java, I am always looking to branch out, learn more languages and
+            other skills. I have the most experience in coding in Java and object-oriented languages, and have
+            experience in C, Python, and a little HTML5.</p>
         </div>
         <div id="about me" class="subsection">
             <h1>About Me</h1>
@@ -81,6 +139,6 @@
                 culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
     </section>
-
+    -->
 </body>
 </html>
